// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PanelWithDetails /> Bottom controls 1`] = `
<div
  className="panel-show-details panel-show-details-bottom panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <h4
      className="panel-title"
      role="presentation"
    >
      <a
        aria-controls={undefined}
        aria-expanded={false}
        aria-selected={false}
        className="collapsed"
        href={undefined}
        onClick={[Function]}
        role={undefined}
      >
        Show details
      </a>
    </h4>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={true}
    className="panel-collapse collapse"
    id={undefined}
    role={undefined}
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - custom labels 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <h4
      className="panel-title"
      role="presentation"
    >
      <a
        aria-controls={undefined}
        aria-expanded={false}
        aria-selected={false}
        className="collapsed"
        href={undefined}
        onClick={[Function]}
        role={undefined}
      >
        Show
      </a>
    </h4>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={true}
    className="panel-collapse collapse"
    id={undefined}
    role={undefined}
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - default 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <h4
      className="panel-title"
      role="presentation"
    >
      <a
        aria-controls={undefined}
        aria-expanded={false}
        aria-selected={false}
        className="collapsed"
        href={undefined}
        onClick={[Function]}
        role={undefined}
      >
        Show details
      </a>
    </h4>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={true}
    className="panel-collapse collapse"
    id={undefined}
    role={undefined}
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - default expanded 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
  id={null}
>
  <div
    className="panel-heading"
  >
    <h4
      className="panel-title"
      role="presentation"
    >
      <a
        aria-controls={undefined}
        aria-expanded={true}
        aria-selected={true}
        className={null}
        href={undefined}
        onClick={[Function]}
        role={undefined}
      >
        Hide details
      </a>
    </h4>
  </div>
  <div
    aria-expanded={null}
    aria-hidden={false}
    className="panel-collapse collapse in"
    id={undefined}
    role={undefined}
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;
